--- a/pages/18641.html
+++ b/pages/18641.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p><strong>O’Nan moonshine</strong> concerns the existence of a graded infinite-dimensional module for the <a class='existingWikiWord' href='/nlab/show/sporadic+finite+simple+group'>sporadic finite simple group</a> of O’Nan, for which the McKay–Thompson series are weight 3/2 mock modular forms.</p>
+<p><strong>O’Nan moonshine</strong> concerns the existence of a graded infinite-dimensional module for the <a class='existingWikiWord' href='/nlab/show/sporadic+finite+simple+group'>sporadic finite simple group</a> of O’Nan, for which the McKay-Thompson series are weight 3/2 mock modular forms. This form of <a class='existingWikiWord' href='/nlab/show/Moonshine'>moonshine</a> relates congruences of McKay-Thompson series and the Selmer and Tate-Shafarvich groups of certain optimal elliptic curves.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -335,17 +335,23 @@ margin-left: 0em;
 <ul>
 <li>John Duncan, Michael Mertens, Ken Ono, <em>Pariah moonshine</em>, Nature Communications 8: 670 (2017), <a href='https://www.nature.com/articles/s41467-017-00660-y'>article</a></li>
 </ul>
+
+<p>For a popular summary,</p>
+
+<ul>
+<li>Erica Klarreich, <em>Moonshine Link Discovered for Pariah Symmetries</em>, <a href='https://www.quantamagazine.org/moonshine-link-discovered-for-pariah-symmetries-20170922/'>Quanta</a></li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Created on September 23, 2017 07:21:16 
+  Revised on September 23, 2017 08:16:00 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (31.185.156.112)
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/O%27Nan+moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/O%27Nan+moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/O%27Nan+moonshine/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/O%27Nan+moonshine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/O%27Nan+moonshine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
