--- a/pages/18648.html
+++ b/pages/18648.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      pascallothar in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      pascallothar
   </h1>
 
 
@@ -308,38 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5af6230cf319da42b897286061d6137003d87dc2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo>∀</mo><mrow><mi>b</mi><mo>∈</mo><msubsup><mi>C</mi> <mi>cp</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><mi>Σ</mi><mo stretchy='false'>)</mo></mrow></munder><mrow><mo>(</mo><mi>d</mi><msub><mi>𝒮</mi> <mrow><mi>b</mi><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow></msub><mo stretchy='false'>(</mo><mi>Φ</mi><mo stretchy='false'>)</mo><mo>=</mo><mn>0</mn><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>⇔</mo><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><msubsup><mi>j</mi> <mi>Σ</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><mi>Φ</mi><msup><mo stretchy='false'>)</mo> <mo>*</mo></msup><mo stretchy='false'>(</mo><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo stretchy='false'>)</mo><mo>=</mo><mn>0</mn><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo><mi>azertyuiop</mi></mrow><annotation encoding='application/x-tex'>
-  \underset{b \in C^\infty_{cp}(\Sigma)}{\forall}
-  \left(
-     d \mathcal{S}_{b \mathbf{L}}(\Phi) = 0
-  \right)
-  \;\Leftrightarrow\;
-  \left(
-    j^\infty_\Sigma(\Phi)^\ast ( \delta_{EL} \mathbf{L} ) = 0
-  \right)
-  \,.
-azertyuiop
-
-</annotation></semantics></math></div>
+    
 </div>
 
 <div class="revisedby">
-  Revised on September 25, 2017 11:07:17 
-  by <span class="newWikiWord">pascallothar<a href="/nlab/new/pascallothar">?</a></span>
+  Created on September 25, 2017 11:07:54 
+  by <a class="existingWikiWord" href="/nlab/show/pascallothar">pascallothar</a>
   (2a02:a03f:40da:a100:daa2:5eff:fe8c:8b28)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1081" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1081 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/pascallothar" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/pascallothar" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/pascallothar" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/pascallothar" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
