--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,30 +308,24 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5af6230cf319da42b897286061d6137003d87dc2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo>∀</mo><mrow><mi>b</mi><mo>∈</mo><msubsup><mi>C</mi> <mi>cp</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><mi>Σ</mi><mo stretchy='false'>)</mo></mrow></munder><mrow><mo>(</mo><mi>d</mi><msub><mi>𝒮</mi> <mrow><mi>b</mi><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow></msub><mo stretchy='false'>(</mo><mi>Φ</mi><mo stretchy='false'>)</mo><mo>=</mo><mn>0</mn><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>⇔</mo><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><msubsup><mi>j</mi> <mi>Σ</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><mi>Φ</mi><msup><mo stretchy='false'>)</mo> <mo>*</mo></msup><mo stretchy='false'>(</mo><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo stretchy='false'>)</mo><mo>=</mo><mn>0</mn><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo><mi>azertyuiop</mi></mrow><annotation encoding='application/x-tex'>
-  \underset{b \in C^\infty_{cp}(\Sigma)}{\forall}
-  \left(
-     d \mathcal{S}_{b \mathbf{L}}(\Phi) = 0
-  \right)
-  \;\Leftrightarrow\;
-  \left(
-    j^\infty_\Sigma(\Phi)^\ast ( \delta_{EL} \mathbf{L} ) = 0
-  \right)
-  \,.
-azertyuiop
+    <h1 id='idea'>Idea</h1>
 
-</annotation></semantics></math></div>
+<h1 id='definition'>Definition</h1>
+
+<h1 id='properties'>Properties</h1>
+
+<h1 id='related_concepts'>Related concepts</h1>
 </div>
 
 <div class="revisedby">
-  Revised on September 25, 2017 11:07:17 
-  by <span class="newWikiWord">pascallothar<a href="/nlab/new/pascallothar">?</a></span>
-  (2a02:a03f:40da:a100:daa2:5eff:fe8c:8b28)
+  Revised on September 25, 2017 12:16:06 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (147.251.81.21)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1081" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1081 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1082" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1082 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
