--- a/pages/4539.html
+++ b/pages/4539.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -386,7 +386,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a>, <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a></p>
 </li>
 
 <li>
@@ -399,9 +399,21 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology and cohomology</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></p>
+</li>
 </ul>
 </li>
 
@@ -597,14 +609,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 22, 2017 05:06:47 
+  Revised on September 26, 2017 15:51:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.218.150.85)
+  (188.105.77.106)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homological+algebra+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homological+algebra+-+contents/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/homological+algebra+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homological+algebra+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homological+algebra+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homological+algebra+-+contents/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/homological+algebra+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homological+algebra+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
