--- a/pages/18644.html
+++ b/pages/18644.html
@@ -515,7 +515,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contemts'>Contemts</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In the construction of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> various naive mathematical constructions give rise to ill-defined “<a class='existingWikiWord' href='/nlab/show/divergent+series'>divergent</a>” expressions.</p>
@@ -525,6 +525,14 @@ margin-left: 0em;
 <p>Other divergences occcur in the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> that the spactime <a class='existingWikiWord' href='/nlab/show/support'>support</a> of the <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> (the support of the “<a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic switching</a>”) tends without bounds to all of spacetime, also called the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a>. Since this large distance involved in this limit translate, under <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> to low <a class='existingWikiWord' href='/nlab/show/frequency'>frequencies</a>, these are called <em>infrared divergences</em>.</p>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a> the issue is dealt with by realizing that, despite superficial appearance, already the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatically switched</a> <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> does make physical sense, namely for the computation of those <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> whose <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/support'>support</a> is such that its <a class='existingWikiWord' href='/nlab/show/causally+closed+subset'>causal closure</a> lies inside the support of the switched S-matrix (<a href='S-matrix#PerturbativeQuantumObservablesIsLocalnet'>this prop.</a>). This gives a well-defined meaning to <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> <em>without</em> having to consider the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a>.</p>
+
+<h2 id='properties'>Properties</h2>
+
+<blockquote>
+<p>The <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Lee-Nauenberg theorem</a> is a fundamental quantum mechanical result which provides the standard theoretical response to the problem of collinear and infrared divergences. Its argument, that the divergences due to massless charged particles can be removed by summing over degenerate states, has been successfully applied to systems with final state degeneracies such as LEP processes. If there are massless particles in both the initial and final states, as will be the case at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, the theorem requires the incorporation of disconnected <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>diagrams</a> which produce connected interference effects at the level of the cross-section. However, this aspect of the theory has never been fully tested in the calculation of a cross-section. We show through explicit examples that in such cases the theorem introduces a divergent series of diagrams and hence fails to cancel the infrared divergences. It is also demonstrated that the widespread practice of treating soft infrared divergences by the <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Bloch-Nordsieck method</a> and handling collinear divergences by the Lee-Nauenberg method is not consistent in such cases.</p>
+
+<p>(<a href='#LavelleMcMullan05'>Lavelle-McMullan 05</a>)</p>
+</blockquote>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -550,6 +558,12 @@ margin-left: 0em;
 <li id='AAS10'>Andreas Aste, Cyrill von Arx, <a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 4 of <em>Regularization in quantum field theory from the causal point of view</em>, Prog. Part. Nucl. Phys.64:61-119, 2010 (<a href='https://arxiv.org/abs/0906.1952'>arXiv:0906.1952</a>)</li>
 </ul>
 
+<p>Discussion of cancellation of IR divergences:</p>
+
+<ul>
+<li id='LavelleMcMullan05'>Martin Lavelle, David McMullan, <em>Collinearity, convergence and cancelling infrared divergences</em>, JHEP 0603 (2006) 026 (<a href='https://arxiv.org/abs/hep-ph/0511314'>arXiv:hep-ph/0511314</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -566,17 +580,25 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on September 24, 2017 15:15:07 
+  Revised on September 26, 2017 16:46:13 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (188.105.77.106)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
