--- a/pages/11773.html
+++ b/pages/11773.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -922,6 +922,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></p>
 </li>
 
@@ -939,14 +943,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 13, 2017 08:38:18 
+  Revised on September 27, 2017 18:34:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (188.105.77.106)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lagrangian+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lagrangian+quantum+field+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Lagrangian+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lagrangian+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lagrangian+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lagrangian+quantum+field+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Lagrangian+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lagrangian+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
