--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,18 +308,20 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>jsjs</p>
+    <p><math class='maruku-mathml' display='inline' id='mathml_707ff520dcaf78f58204f0870618618824cd5ba7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>⊙</mo><mi>g</mi><mo>∘</mo><mi>h</mi><mo>•</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>f \odot g \circ h \bullet k</annotation></semantics></math></p>
+
+<p>jsjs</p>
 </div>
 
 <div class="revisedby">
-  Revised on September 27, 2017 17:52:32 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.105.77.106)
+  Revised on September 28, 2017 10:38:03 
+  by <span class="newWikiWord">Max S. New<a href="/nlab/new/Max+S.+New">?</a></span>
+  (129.10.110.48)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1089" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1089 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1090" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1090 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
