--- a/pages/17230.html
+++ b/pages/17230.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -326,6 +326,12 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a>, <em>Schwinger-Dyson equations</em>, 2009 (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-II-4-4p.pdf'>pdf</a>)</li>
 </ul>
 
+<p>In the context of <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-formalism</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>pAQFT</a>:</p>
+
+<ul>
+<li id='Rejzner16'><a class='existingWikiWord' href='/nlab/show/Katarzyna+Rejzner'>Katarzyna Rejzner</a>, p. 152 of <em>Perturbative Algebraic Quantum Field Theory</em>, Mathematical Physics Studies, Springer 2016 (<a href='https://link.springer.com/book/10.1007%2F978-3-319-25901-7'>web</a>)</li>
+</ul>
+
 <p>
 </p>
 
@@ -335,14 +341,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February 19, 2016 15:16:02 
+  Revised on September 28, 2017 18:39:01 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.180)
+  (188.105.77.106)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Schwinger-Dyson+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Schwinger-Dyson+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schwinger-Dyson+equation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Schwinger-Dyson+equation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schwinger-Dyson+equation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
