--- a/pages/18641.html
+++ b/pages/18641.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -333,7 +333,7 @@ margin-left: 0em;
 <p>For an informal introduction,</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/John+Duncan'>John Duncan</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Mertens'>Michael Mertens</a>, <a class='existingWikiWord' href='/nlab/show/Ken+Ono'>Ken Ono</a>, <em>Pariah moonshine</em>, Nature Communications 8: 670 (2017), <a href='https://www.nature.com/articles/s41467-017-00660-y'>article</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/John+Duncan'>John Duncan</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Mertens'>Michael Mertens</a>, <a class='existingWikiWord' href='/nlab/show/Ken+Ono'>Ken Ono</a>, <em>Pariah moonshine</em>, Nature Communications 8: 670 (2017), <a href='https://www.nature.com/articles/s41467-017-00660-y'>article</a>, <a href='https://arxiv.org/abs/1709.08867'>arXiv:1709.08867</a></li>
 </ul>
 
 <p>For a popular summary,</p>
@@ -344,14 +344,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 23, 2017 18:16:34 
+  Revised on September 29, 2017 03:40:22 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (31.185.156.112)
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/O%27Nan+moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/O%27Nan+moonshine/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/O%27Nan+moonshine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/O%27Nan+moonshine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/O%27Nan+moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/O%27Nan+moonshine/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/O%27Nan+moonshine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/O%27Nan+moonshine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
