--- a/pages/18653.html
+++ b/pages/18653.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      field theory in nLab
+      relativistic quantum field theory in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      field theory
+      relativistic quantum field theory
   </h1>
 
 
@@ -308,85 +308,47 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>:</p>
+    <p>In the context of the <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> One speaks of <em>relativistic</em> (<a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>) <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a> to highlight that the underlying spaces are <a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>Lorentzian</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetimes</a> that model configurations of the field of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> according to the theory of “<a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>”, whence the name.</p>
+
+<p>This is in contrast to “<span class='newWikiWord'>Euclidean field theory<a href='/nlab/new/Euclidean+field+theory'>?</a></span>”. (…)</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory (physics)</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+locality'>causal locality</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>prequantum field theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>locally covariant perturbative algebraic quantum field theory</a></p>
 </li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/FQFT'>functorial quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/local+quantum+field+theory'>local quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/relativistic+quantum+field+theory'>relativistic quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a>:</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/class+field+theory'>class field theory</a></li>
 </ul>
 
 <p>
 </p>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/disambiguation'>disambiguation</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on September 29, 2017 13:14:01 
+  Created on September 29, 2017 13:21:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (188.105.77.106)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/field+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/relativistic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/field+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/relativistic+quantum+field+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/field+theory" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/relativistic+quantum+field+theory" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/field+theory" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/relativistic+quantum+field+theory" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
