--- a/pages/4085.html
+++ b/pages/4085.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -926,7 +926,7 @@ margin-left: 0em;
 
 <p>If instead of restricting to Minkowski space, spacetime is allowed to be an arbitrary <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a> one speaks of the resulting framework as the theory of <em><a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a></em>.</p>
 
-<p>Mathematically, special relativity is essentially the theory of <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a> as a <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a>, hence equipped with the constant <a class='existingWikiWord' href='/nlab/show/metric+space'>metric</a> <a class='existingWikiWord' href='/nlab/show/tensor'>tensor</a> which at each point is the <a class='existingWikiWord' href='/nlab/show/bilinear+form'>bilinear form</a> with <a class='existingWikiWord' href='/nlab/show/quadratic+form'>signature</a> <math class='maruku-mathml' display='inline' id='mathml_1174490522e528ebf3959ef341746297eebd8737_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo>,</mo><mi>⋯</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-,+, \cdots, +)</annotation></semantics></math> or else <math class='maruku-mathml' display='inline' id='mathml_1174490522e528ebf3959ef341746297eebd8737_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mi>⋯</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(+,-,\cdots, -)</annotation></semantics></math> (depending on convention). The null-vectors in this metric characterize the speed of <a class='existingWikiWord' href='/nlab/show/light'>light</a>. The linear <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a> of this metric are the <a class='existingWikiWord' href='/nlab/show/Lorentz+group'>Lorentz transformations</a> and the fact that with the Minkowski metric these also preserve, hence, null rays is the mathematical model for the famous <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenological</a> observation that “the speed of light is the same in all reference systems”.</p>
+<p>Mathematically, special relativity is essentially the theory of <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a> as a <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a>, hence equipped with the constant <a class='existingWikiWord' href='/nlab/show/metric+space'>metric</a> <a class='existingWikiWord' href='/nlab/show/tensor'>tensor</a> which at each point is the <a class='existingWikiWord' href='/nlab/show/bilinear+form'>bilinear form</a> with <a class='existingWikiWord' href='/nlab/show/quadratic+form'>signature</a> <math class='maruku-mathml' display='inline' id='mathml_d0adb36e1d95060455be774c0758e5416ebea54b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo>,</mo><mi>⋯</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-,+, \cdots, +)</annotation></semantics></math> or else <math class='maruku-mathml' display='inline' id='mathml_d0adb36e1d95060455be774c0758e5416ebea54b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mi>⋯</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(+,-,\cdots, -)</annotation></semantics></math> (depending on convention). The null-vectors in this metric characterize the speed of <a class='existingWikiWord' href='/nlab/show/light'>light</a>. The linear <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a> of this metric are the <a class='existingWikiWord' href='/nlab/show/Lorentz+group'>Lorentz transformations</a> and the fact that with the Minkowski metric these also preserve, hence, null rays is the mathematical model for the famous <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenological</a> observation that “the speed of light is the same in all reference systems”.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -941,6 +941,14 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>, <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/relativistic+particle'>relativistic particle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/relativistic+quantum+field+theory'>relativistic field theory</a></p>
 </li>
 </ul>
 
@@ -958,14 +966,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September  8, 2013 15:32:31 
+  Revised on September 29, 2017 15:57:14 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.135.167)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/special+relativity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/special+relativity/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/special+relativity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/special+relativity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/special+relativity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/special+relativity/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/special+relativity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/special+relativity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
