--- a/pages/18580.html
+++ b/pages/18580.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,18 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>3.6</p>
+    <h1 id='floors_and_ceilings'>Floors and ceilings</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The floor and ceiling of a <a class='existingWikiWord' href='/nlab/show/real+number'>real number</a> are <a class='existingWikiWord' href='/nlab/show/integer'>integers</a>, the result of rounding the real number down or up (respectively). When viewed as <a class='existingWikiWord' href='/nlab/show/function'>functions</a> from <math class='maruku-mathml' display='inline' id='mathml_5b39edfaf0923466e5efd6ab93552eb7cfd0d830_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math> to itself (or to <math class='maruku-mathml' display='inline' id='mathml_5b39edfaf0923466e5efd6ab93552eb7cfd0d830_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math>), these are standard examples of functions exhibiting partial notions of <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuity</a>: the floor function is both <span class='newWikiWord'>right-continuous<a href='/nlab/new/right-continuous+map'>?</a></span> and <a class='existingWikiWord' href='/nlab/show/semicontinuous+map'>upper semicontinuous</a>, while the ceiling function is both <span class='newWikiWord'>left-continuous<a href='/nlab/new/left-continuous+map'>?</a></span> and <a class='existingWikiWord' href='/nlab/show/semicontinuous+map'>lower semicontinuous</a>. They are <a class='existingWikiWord' href='/nlab/show/step+function'>step functions</a> used in the theory of the <span class='newWikiWord'>Cauchy integral<a href='/nlab/new/Cauchy+integral'>?</a></span> and the relationship between <a class='existingWikiWord' href='/nlab/show/integral'>integrals</a> and <a class='existingWikiWord' href='/nlab/show/series'>series</a>. From the perspective of <a class='existingWikiWord' href='/nlab/show/order+theory'>order theory</a>, the maps may be seen as the <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right adjoint</a> and <a class='existingWikiWord' href='/nlab/show/left+adjoint'>left adjoint</a> (respectively) of the <a class='existingWikiWord' href='/nlab/show/inclusion+function'>inclusion map</a> from <math class='maruku-mathml' display='inline' id='mathml_5b39edfaf0923466e5efd6ab93552eb7cfd0d830_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_5b39edfaf0923466e5efd6ab93552eb7cfd0d830_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>.</p>
+
+<p>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+</p>
+
+<p>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Created on September  4, 2017 06:49:12 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (2405:204:8485:ab49:a8f3:c856:6f17:9f86)
+  Revised on October  1, 2017 00:57:02 
+  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
+  (2605:6000:2b44:1100:c033:bff9:3b27:13e2)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/floor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/floor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/floor/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/floor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/floor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
