--- a/pages/1785.html
+++ b/pages/1785.html
@@ -308,11 +308,11 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Владимир Воеводский (who publishes in English as Vladimir Voevodsky) (<a href='http://www.math.ias.edu/~vladimir/Site3/home.html'>web site</a>) is a Russian mathematician working in the Institute for Advanced Study.</p>
+    <p>Владимир Воеводский (who published in English as Vladimir Voevodsky) (<a href='http://www.math.ias.edu/~vladimir/Site3/home.html'>web site</a>) was a Russian mathematician working in the Institute for Advanced Study.</p>
 
 <p>He received a <a class='existingWikiWord' href='/nlab/show/Fields+medal'>Fields medal</a> in 2002 for a <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> of the <a class='existingWikiWord' href='/nlab/show/Milnor%27s+conjecture'>Milnor conjecture</a>. The proof crucially uses <a class='existingWikiWord' href='/nlab/show/motivic+homotopy+theory'>A1-homotopy theory</a> and <a class='existingWikiWord' href='/nlab/show/motivic+cohomology'>motivic cohomology</a> developed by Voevodsky for this purpose. In further development of this in 2009 Voevodsky announced a proof of the <a class='existingWikiWord' href='/nlab/show/norm+residue+isomorphism+theorem'>Bloch-Kato conjecture</a>.</p>
 
-<p>After this work in <a class='existingWikiWord' href='/nlab/show/algebraic+geometry'>algebraic geometry</a>, <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a> and <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a> Voevodsky turned to the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations of mathematics</a> and is now working on <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> which he is advertising as a new “<a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalent</a> foundations” for modern mathematics with its emphasis on <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a> and <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>.</p>
+<p>After this work in <a class='existingWikiWord' href='/nlab/show/algebraic+geometry'>algebraic geometry</a>, <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a> and <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a> Voevodsky turned to the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations of mathematics</a> and worked on <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> which he described as a new “<a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalent</a> foundations” for modern mathematics with its emphasis on <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a> and <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -368,14 +368,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 15, 2015 13:35:44 
-  by <a class="existingWikiWord" href="/nlab/show/Adeel+Khan+Yusufzai">Adeel Khan</a>
-  (77.9.233.208)
+  Revised on October  1, 2017 00:45:57 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (120.21.50.241)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Vladimir+Voevodsky" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vladimir+Voevodsky/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Vladimir+Voevodsky" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vladimir+Voevodsky" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Vladimir+Voevodsky" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vladimir+Voevodsky/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Vladimir+Voevodsky" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vladimir+Voevodsky" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
