--- a/pages/11382.html
+++ b/pages/11382.html
@@ -324,7 +324,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincaré Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
 </ul>
 </li>
 
@@ -1146,6 +1146,12 @@ margin-left: 0em;
 <li id='HulseTaylor75'>Hulse, Taylor, <em>Discovery of a pulsar in a binary system</em>, The astrophysical journal, 195:L51-53, 1975 (<a href='http://adsabs.harvard.edu/full/1975ApJ...195L..51H'>web</a>)</li>
 </ul>
 
+<p>The first proposal of the <a class='existingWikiWord' href='/nlab/show/LIGO'>LIGO</a>-type experiment for the detection of gravitational waves is due to</p>
+
+<ul>
+<li>M. Gertsenshtein, I. Postivoit, <em>On the detection of low frequency gravitational waves</em>, Soviet Physics JETP, volume 16, number 2, 1963 (<a href='http://www.jetp.ac.ru/cgi-bin/dn/e_016_02_0433.pdf'>pdf</a>)</li>
+</ul>
+
 <p>Discussion of theoretical predictions for events that have a chance to yield detectable gravitational wave signals includes</p>
 
 <ul>
@@ -1198,14 +1204,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 11, 2016 13:16:18 
+  Revised on October  3, 2017 08:06:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.45.5.227)
+  (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gravitational+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gravitational+wave/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/gravitational+wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gravitational+wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gravitational+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gravitational+wave/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/gravitational+wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gravitational+wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
