--- a/pages/5753.html
+++ b/pages/5753.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Noether identities in nLab
+      Noether identity in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Noether identities
+      Noether identity
   </h1>
 
 
@@ -898,45 +898,31 @@ margin-left: 0em;
 </div>
 </div>
 
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li></ul></div>
-<h2 id='definition'>Definition</h2>
+<blockquote>
+<p>for the moment see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>geometry of physics -- A first idea of quantum field theory</a></em> <a href='geometry+of+physics+--+A+first+idea+of+quantum+field+theory#NoetherIdentities'>this prop.</a></p>
+</blockquote>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mi>C</mi><mo>→</mo><msup><mi>𝔸</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>S : C \to \mathbb{A}^1</annotation></semantics></math> an <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a>, the <math class='maruku-mathml' display='inline' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{O}(C)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/module'>module</a> of its <strong>Noether identities</strong> is the <a class='existingWikiWord' href='/nlab/show/kernel'>kernel</a> <math class='maruku-mathml' display='inline' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>N</mi> <mi>S</mi></msub><mo>↪</mo><mi>Der</mi><mo stretchy='false'>(</mo><mi>𝒪</mi><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>N_S \hookrightarrow Der(\mathcal{O}(C))</annotation></semantics></math> of the canonical morphism</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ι</mi> <mrow><mi>d</mi><mi>S</mi></mrow></msub><mo>:</mo><mi>Der</mi><mo stretchy='false'>(</mo><mi>𝒪</mi><mo stretchy='false'>(</mo><mi>S</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>→</mo><mi>𝒪</mi><mo stretchy='false'>(</mo><mi>S</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  \iota_{d S} : Der(\mathcal{O}(S)) \to \mathcal{O}(S)
-  \,.
-
-</annotation></semantics></math></div>
-<p>See <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BRST-BV complex</a> for background and details.</p>
-
-<h2 id='examples'>Examples</h2>
-
-<p>Assume that <math class='maruku-mathml' display='inline' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is sufficiently well behaved and of finite dimension such that the module of <a class='existingWikiWord' href='/nlab/show/derivation'>derivation</a>s has (locally) a <a class='existingWikiWord' href='/nlab/show/basis'>basis</a> <math class='maruku-mathml' display='inline' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mo>∂</mo> <mi>i</mi></msub><msub><mo stretchy='false'>}</mo> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>\{\partial_i\}_i</annotation></semantics></math>. Then the Noether identities are (locally) tuples of functions <math class='maruku-mathml' display='inline' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msup><mi>v</mi> <mi>i</mi></msup><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{v^i\}</annotation></semantics></math> such that</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_25d3c89ca2ce582bc73ce7a5644370f9a5580b85_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>i</mi></munder><msup><mi>v</mi> <mi>i</mi></msup><msub><mo>∂</mo> <mi>i</mi></msub><mi>S</mi><mo>=</mo><mn>0</mn><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  \sum_i v^i \partial_i S = 0
-  \,.
-
-</annotation></semantics></math></div>
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on March  8, 2011 14:13:44 
+  Revised on October  4, 2017 15:40:19 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.211.232.88)
+  (192.41.135.207)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Noether+identities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Noether+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Noether+identity/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Noether+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Noether+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Noether+identities" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Noether+identity" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Noether+identities" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Noether+identity" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Noether+identities" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Noether+identity" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
