--- a/pages/18660.html
+++ b/pages/18660.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      differential graded manifold in nLab
+      graded manifold in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      differential graded manifold
+      graded manifold
   </h1>
 
 
@@ -464,7 +464,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_9f16c2374c5d9101ddd545107b9bd8f0a75c4bd1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
+<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/infinity-Lie+theory'>∞-Lie theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>)</p>
@@ -729,7 +729,7 @@ margin-left: 0em;
 
 <h2 id='examples_2'>Examples</h2>
 
-<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_9f16c2374c5d9101ddd545107b9bd8f0a75c4bd1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
+<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
 
 <ul>
 <li>
@@ -755,7 +755,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_9f16c2374c5d9101ddd545107b9bd8f0a75c4bd1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
+<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
 
 <ul>
 <li>
@@ -797,7 +797,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_9f16c2374c5d9101ddd545107b9bd8f0a75c4bd1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
+<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
 
 <ul>
 <li>
@@ -835,7 +835,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_9f16c2374c5d9101ddd545107b9bd8f0a75c4bd1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
+<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
 
 <ul>
 <li>
@@ -883,62 +883,57 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples_3'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The notion of <em>differential graded manifold</em> is a generalization of the notion of <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a> from ordinary <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a> to <a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>, specifically to <a class='existingWikiWord' href='/nlab/show/dg-geometry'>dg-geometry</a>. Typically it is taken to be the <a class='existingWikiWord' href='/nlab/show/Isbell+duality'>formal dual</a> to a <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>dgc-algebra</a> which in degree-0 is the <span class='newWikiWord'>algebra of<a href='/nlab/new/algebra+of+function'>?</a></span> <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a> on an ordinary <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a>.</p>
+<p>Under the <a class='existingWikiWord' href='/nlab/show/embedding+of+smooth+manifolds+into+formal+duals+of+R-algebras'>embedding of smooth manifolds into formal duals of R-algebras</a> a <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a> <math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is identified with the <a class='existingWikiWord' href='/nlab/show/duality'>formal dual</a> of its <math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of</a> <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a>. Given then a <math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/graded+vector+space'>graded module</a> <math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔞</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{a}</annotation></semantics></math> over <math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>C^\infty(X)</annotation></semantics></math> concentrated away from zero, the <a class='existingWikiWord' href='/nlab/show/symmetric+algebra'>graded symmetric</a> <a class='existingWikiWord' href='/nlab/show/graded+algebra'>graded algebra</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Sym</mi> <mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow></msub><mrow><mo>(</mo><mi>𝔞</mi><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+  Sym_{C^\infty(X)}\left(
+    \mathfrak{a}
+  \right)
 
-<p>Hence this is a <em><a class='existingWikiWord' href='/nlab/show/graded+manifold'>graded manifold</a></em> whose <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> is equipped with a compatible <a class='existingWikiWord' href='/nlab/show/differential'>differential</a>.</p>
+</annotation></semantics></math></div>
+<p>may naturally be thought of as the <a class='existingWikiWord' href='/nlab/show/duality'>formal dual</a> of a <em><math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math>-graded manifold</em>.</p>
 
-<p>Sometimes this is called an “<a class='existingWikiWord' href='/nlab/show/NQ-supermanifold'>NQ-supermanifold</a>”.</p>
-
-<h2 id='examples_3'>Examples</h2>
-
-<ul>
-<li>
-<p>An <a class='existingWikiWord' href='/nlab/show/Lie+infinity-algebroid'>L-∞ algebroid</a> over a smooth manifold may be thought of as a dg-manifold concentrated in non-negative degree.</p>
-</li>
-
-<li>
-<p>A <a class='existingWikiWord' href='/nlab/show/derived+%E2%88%9E-Lie+algebroid'>derived L-∞ algebroid</a> may be thought of as a dg-manifold in arbitrary degree.</p>
-</li>
-</ul>
+<p>If moreover <math class='maruku-mathml' display='inline' id='mathml_34b9dd80988608ef6d11fffa242f898efd0d7afc_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Sym</mi> <mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow></msub><mrow><mo>(</mo><mi>𝔞</mi><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>Sym_{C^\infty(X)}\left(\mathfrak{a}\right)</annotation></semantics></math> is equipped with a <a class='existingWikiWord' href='/nlab/show/differential'>differential</a> that makes it a <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>differential graded-commutative algebra</a>, then the formal dual is called a <em><a class='existingWikiWord' href='/nlab/show/differential+graded+manifold'>differential graded manifold</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/derived+smooth+manifold'>derived smooth manifold</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/higher+differential+geometry'>higher differential geometry</a>, <a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived geometry</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/dg-scheme'>dg-scheme</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Lie+infinity-algebroid'>Lie infinity-algebroid</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BRST-complex</a>, <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-complex</a></p>
 </li>
 </ul>
 
 <p>
- 
- 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on October  5, 2017 06:07:42 
+  Created on October  5, 2017 06:11:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/differential+graded+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/differential+graded+manifold/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/differential+graded+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/differential+graded+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/graded+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/differential+graded+manifold" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/graded+manifold" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/differential+graded+manifold" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/graded+manifold" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/differential+graded+manifold" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/graded+manifold" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
